inital commit code to populate data in duster configured project

--- a/config.json
+++ b/config.json
@@ -28,7 +28,13 @@
 
 	"links": {
 		"project": [
-
+			{
+				"name": "Duster Data",
+				"key": "dusterdata",
+				"icon": "fas fa-receipt",
+				"url": "pages/populateData.php",
+				"show-header-and-footer": true
+			}
 		],
 		"control-center": [
 
