--- a/pages/js/vue/duster/package.json
+++ b/pages/js/vue/duster/package.json
@@ -16,7 +16,7 @@
     "axios": "^1.3.4",
     "primeflex": "^3.3.0",
     "primeicons": "^6.0.1",
-    "primevue": "^3.26.1",    
+    "primevue": "^3.26.1",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
@@ -31,9 +31,9 @@
     "eslint-plugin-vue": "^9.9.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.4",
+    "sass": "^1.62.0",
     "typescript": "~4.8.4",
     "vite": "^4.1.4",
-    "vue-tsc": "^1.2.0",
-    "sass": "^1.62.0"
+    "vue-tsc": "^1.2.0"
   }
 }
