--- a/pages/js/vue/duster/package.json
+++ b/pages/js/vue/duster/package.json
@@ -13,8 +13,8 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "@vee-validate/i18n": "^4.8.6",
-    "@vee-validate/rules": "^4.8.6",
+    "@vuelidate/core": "^2.0.2",
+    "@vuelidate/validators": "^2.0.2",
     "axios": "^1.3.4",
     "primeflex": "^3.3.0",
     "primeicons": "^6.0.1",
