--- a/pages/js/duster/get-data/tsconfig.json
+++ b/pages/js/duster/get-data/tsconfig.json
@@ -7,7 +7,9 @@
       "@/*": ["./src/*"],
       "@shared/*": ["../shared/src/*"],
       "@assets/*": ["../shared/src/assets/*"]
-    }
+    },
+    "allowJs" : true,
+    "checkJs": false
   },
 
   "references": [
