--- a/pages/js/duster/shared/package.json
+++ b/pages/js/duster/shared/package.json
@@ -7,6 +7,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "dependencies": {
+    "vue": "^3.2.47"
+  },
   "author": "",
   "license": "ISC"
 }
