Roquej 20240102 editor mode (#77)
* Add project-level webpage for project edit option

* Add html to project-level webpage for launching editor mode

* editor mode changes

* REDCap to STARR Link config updates

* update edited DUSTER projects via REDCap API

* correct labeling for new data collection windows when editing

* add db_escape and intval to query

* code cleanup, only allow projects in development status and users with necessary privileges to use edit DUSTER project page

* updated new project app build

* fix ternary operator statement, add more URLs to local storage when editing a project

* code cleanup, adjust project update error responses

* code cleanup

* fix indent

* more code cleanup

--- a/config.json
+++ b/config.json
@@ -31,6 +31,13 @@
 				"icon": "fas fa-receipt",
 				"url": "pages/populateData.php",
 				"show-header-and-footer": true
+			},
+			{
+				"name": "DUSTER: Edit Project",
+				"key": "dustereditproject",
+				"icon": "fas fa-pen-to-square",
+				"url": "pages/editProject.php",
+				"show-header-and-footer": true
 			}
 		],
 		"control-center": [
