--- a/config.json
+++ b/config.json
@@ -73,6 +73,12 @@
 			"type": "checkbox"
 		},
 		{
+			"key": "starrapi-search-url",
+			"name": "STARR-API Search Webservice URL",
+			"required": true,
+			"type": "text"
+		},
+		{
 			"key": "starrapi-metadata-url",
 			"name": "STARR-API Metadata Webservice URL",
 			"required": true,
@@ -110,10 +116,24 @@
 			"validation" : "number"
 		},
 		{
-			"key": "local-dev",
-			"name": "<b>Local Development Environment</b><br>local development flag for REDCap API URL",
-			"required": false,
-			"type": "checkbox"
+			"key": "server-type",
+			"name": "<b>Server Type</b><br>server environment flag for REDCap URL",
+			"required": true,
+			"type": "dropdown",
+			"choices": [
+				{
+					"value": "local",
+					"name": "Local"
+				},
+				{
+					"value": "development",
+					"name": "Development"
+				},
+				{
+					"value": "production",
+					"name": "Production"
+				}
+			]
 		},
 		{
 			"key": "enable-allowlist",
